--- a/css/your_custom_style.css
+++ b/css/your_custom_style.css
@@ -1,12 +1,12 @@
 body * {
     border: 1px solid red;
 }
-/* body {
+body {
     display: flex;
     flex-direction: column;
     font-family: 'Poppins', sans-serif;
     background: #fafafa;
-} */
+}
 
 .content-wrap {
     flex: 1 0 auto;
