--- a/css/your_custom_style.css
+++ b/css/your_custom_style.css
@@ -29,3 +29,14 @@ body {
     margin-top: 100px;
     margin-left: 0px; 
 }
+#response-field{
+    margin-bottom: 70px;
+}
+footer {
+    position: static;
+    bottom: 0;
+}
+.response{
+    background-color: rgb(164, 164, 183);
+    border-radius: 8px;
+}
